# system-design-impl

./: README.md  README_CN.md
consistent-hashing/: README.md  README_CN.md  pyproject.toml
consistent-hashing/docs/: design.md
consistent-hashing/examples/: demo.py
consistent-hashing/src/consistent_hashing/: __init__.py  hash_functions.py  ring.py  stats.py
consistent-hashing/tests/: test_hash_functions.py  test_properties.py  test_ring.py  test_stats.py
key-value-store/: README.md  README_CN.md  pyproject.toml  requirements.md
key-value-store/docs/: design.md
key-value-store/examples/: demo.py
key-value-store/proto/: kvstore.proto
key-value-store/src/kv_store/: __init__.py  client.py  config.py  node.py
key-value-store/src/kv_store/cluster/: __init__.py  gossip.py  hinted_handoff.py  membership.py  merkle_tree.py
key-value-store/src/kv_store/network/: __init__.py  grpc_client.py  grpc_server.py  kvstore_pb2.py  kvstore_pb2_grpc.py
key-value-store/src/kv_store/replication/: __init__.py  coordinator.py  quorum.py  vector_clock.py
key-value-store/src/kv_store/storage/: __init__.py  bloom_filter.py  compaction.py  engine.py  memtable.py  sstable.py  wal.py
key-value-store/tests/: test_client.py  test_integration.py  test_multi_node.py  test_node.py  test_properties.py
key-value-store/tests/test_cluster/: __init__.py  test_gossip.py  test_hinted_handoff.py  test_membership.py  test_merkle_tree.py
key-value-store/tests/test_network/: __init__.py  test_grpc.py
key-value-store/tests/test_replication/: __init__.py  test_coordinator.py  test_quorum.py  test_vector_clock.py
key-value-store/tests/test_storage/: test_bloom_filter.py  test_compaction.py  test_engine.py  test_memtable.py  test_sstable.py  test_wal.py  test_wal_recovery.py
rate-limiter/: README.md  README_CN.md  pyproject.toml
rate-limiter/docs/: design.md
rate-limiter/examples/: basic_usage.py  fastapi_example.py  flask_example.py
rate-limiter/src/rate_limiter/: __init__.py  config.py  core.py  decorators.py  keys.py
rate-limiter/src/rate_limiter/algorithms/: __init__.py  base.py  fixed_window.py  leaking_bucket.py  sliding_window_counter.py  sliding_window_log.py  token_bucket.py
rate-limiter/src/rate_limiter/middleware/: __init__.py  fastapi.py  flask.py
rate-limiter/src/rate_limiter/storage/: __init__.py  base.py  memory.py  redis.py
rate-limiter/tests/: __init__.py  test_core.py  test_decorators.py  test_keys.py
rate-limiter/tests/test_algorithms/: __init__.py  test_fixed_window.py  test_leaking_bucket.py  test_sliding_window_counter.py  test_sliding_window_log.py  test_token_bucket.py
rate-limiter/tests/test_middleware/: test_fastapi.py  test_flask.py
rate-limiter/tests/test_storage/: test_memory.py  test_redis.py
unique-id-generator/: README.md  README_CN.md  pyproject.toml
unique-id-generator/docs/: design.md
unique-id-generator/examples/: basic_usage.py  multi_generator.py
unique-id-generator/src/unique_id/: __init__.py  clock.py  config.py  exceptions.py  parser.py  snowflake.py  strategies.py
unique-id-generator/tests/: helpers.py  test_clock.py  test_config.py  test_parser.py  test_properties.py  test_snowflake.py  test_strategies.py
url-shortener/: README.md  README_CN.md  pyproject.toml
url-shortener/docs/: design.md
url-shortener/examples/: demo_server.py
url-shortener/src/url_shortener/: __init__.py  exceptions.py  models.py  shortener.py  storage.py  strategies.py
url-shortener/tests/: test_exceptions.py  test_models.py  test_properties.py  test_shortener.py  test_storage.py  test_strategies.py
