[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consistent-hashing"
version = "0.1.0"
description = "A Python consistent hashing library implementing the hash ring algorithm with virtual nodes for balanced key distribution across servers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Consistent Hashing Authors" },
]
keywords = ["consistent-hashing", "hash-ring", "virtual-nodes", "distributed-systems", "load-balancing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[tool.hatch.build.targets.wheel]
packages = ["src/consistent_hashing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
