[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kv-store"
version = "0.1.0"
description = "A distributed key-value store implementing consistent hashing, quorum consensus, gossip protocol, and LSM-tree storage."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "KV Store Authors" },
]
keywords = ["distributed-systems", "key-value-store", "consistent-hashing", "quorum", "lsm-tree", "grpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "consistent-hashing",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "grpcio-testing",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kv_store"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
