[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unique-id-generator"
version = "0.1.0"
description = "A Python unique ID generator implementing the Twitter Snowflake algorithm for distributed, time-sortable 64-bit IDs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Unique ID Generator Authors" },
]
keywords = ["snowflake", "unique-id", "distributed-systems", "id-generator", "time-sortable"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[tool.hatch.build.targets.wheel]
packages = ["src/unique_id"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
