[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "url-shortener"
version = "0.1.0"
description = "A Python URL shortener library with pluggable hash strategies (hash+collision resolution and base-62 conversion), storage abstraction, and click tracking analytics."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "URL Shortener Authors" },
]
keywords = ["url-shortener", "base62", "hash", "short-url", "url-shortening", "redirect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[tool.hatch.build.targets.wheel]
packages = ["src/url_shortener"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
